--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,7 @@
 :host {
-  background-color: gainsboro;
+  background-color: #FFFFFF;
   font-size: .75em;
   padding: 1em;
   text-align: center;
+  box-shadow: 0px -5px 5px 0px rgba(0, 0, 0, 0.025);
 }
