--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,18 +3,8 @@
   background-color: rgba(248, 249, 250);
   display: grid;
   grid-template-rows: 70px auto;
-  /* height: 50vh; */
 }
 
-div.carousel-image {
-  background-image: var(--image);
-  background-size: cover;
-  background-position: center center;
-  height: calc(50vh - 70px);
-}
-
-nav,
-ngb-carousel {
-  margin-inline: 10vw;
-  max-width: 90vw;
+nav {
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.025);
 }
