Fix: moved carousel back in homepage, added new html element to fix instead

--- a/src/app/components/pages/about-us/about-us.component.html
+++ b/src/app/components/pages/about-us/about-us.component.html
@@ -1,39 +1,41 @@
-<div class="about-row">
-  <img class="logo" alt="Paws and Whiskers"
-       src="/assets/images/header/pawprint-paw-svgrepo-com.svg"/>
+<div class="main-padding">
+  <div class="about-row">
+    <img class="logo" alt="Paws and Whiskers"
+        src="/assets/images/header/pawprint-paw-svgrepo-com.svg"/>
 
-  <p>
-    At <b>Paws and Whiskers</b>, our mission is to connect loving families with their 
-    perfect furry companions. We provide a comprehensive platform for pet adoption 
-    agencies to list available pets, making it easier for potential adopters to 
-    find and welcome a new member into their home.
-  </p>
-</div>
-
-<div class="about-row">
-  <p>
-    Our team is committed to making pet adoption accessible and efficient for 
-    everyone involved.
-  </p>
-</div>
-
-<div class="about-row">
-  <p>
-    Thank you for choosing <b>Paws and Whiskers</b> for your pet adoption needs.
-  </p>
-</div>
-
-<div class="about-contact-row">
-  <div class="address">
-    <p class="address-header">Where You Can Find Us</p>
-    <p>1234 Furry Friends Lane</p>
-    <p>Petville, PA 12345</p>
-    <p>USA</p>
-  </div>
-  <div class="email">
-    <p class="email-header">Contact Us</p>
     <p>
-      <a href="mailto:info@pawsandwhiskers.com">info&#64;pawsandwhiskers.com</a>
+      At <b>Paws and Whiskers</b>, our mission is to connect loving families with their 
+      perfect furry companions. We provide a comprehensive platform for pet adoption 
+      agencies to list available pets, making it easier for potential adopters to 
+      find and welcome a new member into their home.
     </p>
+  </div>
+
+  <div class="about-row">
+    <p>
+      Our team is committed to making pet adoption accessible and efficient for 
+      everyone involved.
+    </p>
+  </div>
+
+  <div class="about-row">
+    <p>
+      Thank you for choosing <b>Paws and Whiskers</b> for your pet adoption needs.
+    </p>
+  </div>
+
+  <div class="about-contact-row">
+    <div class="address">
+      <p class="address-header">Where You Can Find Us</p>
+      <p>1234 Furry Friends Lane</p>
+      <p>Petville, PA 12345</p>
+      <p>USA</p>
+    </div>
+    <div class="email">
+      <p class="email-header">Contact Us</p>
+      <p>
+        <a href="mailto:info@pawsandwhiskers.com">info&#64;pawsandwhiskers.com</a>
+      </p>
+    </div>
   </div>
 </div>
