--- a/src/app/components/pages/browse-agencies/browse-agencies.component.html
+++ b/src/app/components/pages/browse-agencies/browse-agencies.component.html
@@ -1,23 +1,24 @@
+<div class="main-padding">
+  <div class="card agencies">
+    <div class="card-body">
 
-<div class="card agencies">
-  <div class="card-body">
+      <!-- title -->
 
-    <!-- title -->
+      <h5 class="card-title">Browse all the Agencies</h5>
 
-    <h5 class="card-title">Browse all the Agencies</h5>
+      <!-- grid -->
 
-    <!-- grid -->
+      <div class="agencies-grid">
+        @for (agency of agencies | slice: ( currentPage - 1 ) * pageSize : currentPage * pageSize; track agency.id) {
+          <app-card-user [profile]="agency" [imageHeight]="imageHeight"
+                        [showReviews]="false" [showRedirectBtn]="true" [showRating]="true" />
+        }
+      </div>
 
-    <div class="agencies-grid">
-      @for (agency of agencies | slice: ( currentPage - 1 ) * pageSize : currentPage * pageSize; track agency.id) {
-        <app-card-user [profile]="agency" [imageHeight]="imageHeight"
-                       [showReviews]="false" [showRedirectBtn]="true" [showRating]="true" />
-      }
+      <!-- pagination -->
+
+      <ngb-pagination class="pagination" [(page)]="currentPage" [pageSize]="pageSize" [collectionSize]="agencies.length" />
+
     </div>
-
-    <!-- pagination -->
-
-    <ngb-pagination class="pagination" [(page)]="currentPage" [pageSize]="pageSize" [collectionSize]="agencies.length" />
-
   </div>
 </div>
