--- a/src/app/components/pages/homepage/homepage.component.html
+++ b/src/app/components/pages/homepage/homepage.component.html
@@ -1,2 +1,5 @@
-<app-card-homepage-show-new-animals [animals]="animals"/>
-<app-card-homepage-agencies-preview [agencies]="agencies" />
+<app-carousel />
+<div class="main-padding">
+  <app-card-homepage-show-new-animals [animals]="animals"/>
+  <app-card-homepage-agencies-preview [agencies]="agencies" />
+</div>
