--- a/src/app/components/pages/view-adopter/view-adopter.component.html
+++ b/src/app/components/pages/view-adopter/view-adopter.component.html
@@ -1,1 +1,3 @@
-<app-card-user [profile]="adopter" [singlePage]="true" [imageHeight]="cardUserImageHeight" />
+<div class="main-padding">
+  <app-card-user [profile]="adopter" [singlePage]="true" [imageHeight]="cardUserImageHeight" />
+</div>
