--- a/src/app/components/pages/view-animal/view-animal.component.html
+++ b/src/app/components/pages/view-animal/view-animal.component.html
@@ -1,71 +1,74 @@
+<div class="main-padding">
 
-<!-- nav -->
+  <!-- nav -->
 
-<ul ngbNav #nav="ngbNav" [(activeId)]="activeTab" class="nav-tabs">
-  
-  <!-- nav animal and adoption form -->
+  <ul ngbNav #nav="ngbNav" [(activeId)]="activeTab" class="nav-tabs">
+    
+    <!-- nav animal and adoption form -->
 
-  <li [ngbNavItem]="1">
-    <button ngbNavLink>Animal</button>
-    <ng-template ngbNavContent>
+    <li [ngbNavItem]="1">
+      <button ngbNavLink>Animal</button>
+      <ng-template ngbNavContent>
 
-      <div class="animal-tab">
-        
-        <!-- card animal -->
+        <div class="animal-tab">
+          
+          <!-- card animal -->
 
-        @if (animal) {
-          <app-card-animal ngbNavContent [carousel]="true" 
-                           [imageHeight]="imageHeight" [animal]="animal" [status]="status" [singlePage]="true" />
-        }
+          @if (animal) {
+            <app-card-animal ngbNavContent [carousel]="true" 
+                            [imageHeight]="imageHeight" [animal]="animal" [status]="status" [singlePage]="true" />
+          }
 
-        <!-- adoption form -->
+          <!-- adoption form -->
 
-        @if (animal?.status_id === 1) {
+          @if (animal?.status_id === 1) {
 
-          @if (isAuthenticated && isAuthenticatedUserPetAdopter) {
+            @if (isAuthenticated && isAuthenticatedUserPetAdopter) {
 
-            <app-card-application-form class="adoption-form" [animalId]="animal!.id" [authenticatedUser]="authenticatedUser" />
+              <app-card-application-form class="adoption-form" [animalId]="animal!.id" [authenticatedUser]="authenticatedUser" />
+
+            } @else {
+
+              <div class="no-adoption-form">
+                <div class="card">
+                  <div class="card-body">
+                    <p class="card-text">To adopt this Pet, you need to be logged in as a Pet Adopter.</p>
+                  </div>
+                </div>
+              </div>
+
+            }
 
           } @else {
 
             <div class="no-adoption-form">
               <div class="card">
                 <div class="card-body">
-                  <p class="card-text">To adopt this Pet, you need to be logged in as a Pet Adopter.</p>
+                  <p class="card-text">This pet is not available.</p>
                 </div>
               </div>
             </div>
 
           }
+          
+        </div>
 
-        } @else {
+      </ng-template>
+    </li>
 
-          <div class="no-adoption-form">
-            <div class="card">
-              <div class="card-body">
-                <p class="card-text">This pet is not available.</p>
-              </div>
-            </div>
-          </div>
+    <!-- nav agency -->
 
+    <li [ngbNavItem]="2">
+      <button ngbNavLink>Pet Agency</button>
+      <ng-template ngbNavContent>
+        @if (petAgency) {
+          <app-card-user [profile]="petAgency" [imageHeight]="imageHeight" />
         }
-        
-      </div>
+      </ng-template>
+    </li>
 
-    </ng-template>
-  </li>
+  </ul>
 
-  <!-- nav agency -->
+  <div [ngbNavOutlet]="nav" class="nav-outlet"></div>
 
-  <li [ngbNavItem]="2">
-    <button ngbNavLink>Pet Agency</button>
-    <ng-template ngbNavContent>
-      @if (petAgency) {
-        <app-card-user [profile]="petAgency" [imageHeight]="imageHeight" />
-      }
-    </ng-template>
-  </li>
-
-</ul>
-
-<div [ngbNavOutlet]="nav" class="nav-outlet"></div>
+</div>
