--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,8 +8,12 @@ main {
   background-color: #EBF4F5;
 }
 
+/*
+
 section[role="main"] {
   margin-inline: auto;
   max-width: 75%;
   padding-block: 3em;
 }
+
+*/
