--- a/src/app/components/pages/about-us/about-us.component.css
+++ b/src/app/components/pages/about-us/about-us.component.css
@@ -57,3 +57,17 @@
   border-radius: 15px;
   padding: 1em;
 }
+
+.main-padding {
+	align-items: center;
+	display: flex;
+	flex-flow: column;
+	gap: 3em;
+	margin-inline: auto;
+	max-width: 75%;
+	padding-block: 3em;
+}
+
+.main-padding > * {
+	width: 100%;
+}
