--- a/src/app/components/pages/browse-animals/browse-animals.component.css
+++ b/src/app/components/pages/browse-animals/browse-animals.component.css
@@ -119,3 +119,17 @@
   gap: 2em;
   grid-area: animals;
 }
+
+.main-padding {
+	align-items: center;
+	display: flex;
+	flex-flow: column;
+	gap: 3em;
+	margin-inline: auto;
+	max-width: 75%;
+	padding-block: 3em;
+}
+
+.main-padding > * {
+	width: 100%;
+}
