--- a/src/app/components/pages/view-agency/view-agency.component.css
+++ b/src/app/components/pages/view-agency/view-agency.component.css
@@ -23,3 +23,16 @@
 app-card-animal {
   width: 300px;
 }
+
+.main-padding {
+	align-items: center;
+	display: flex;
+	flex-flow: column;
+	margin-inline: auto;
+	max-width: 75%;
+	padding-block: 3em;
+}
+
+.main-padding > * {
+	width: 100%;
+}
