--- a/src/app/components/pages/view-animal/view-animal.component.css
+++ b/src/app/components/pages/view-animal/view-animal.component.css
@@ -16,3 +16,16 @@
 .no-adoption-form {
   margin-top: 1em;
 }
+
+.main-padding {
+	align-items: center;
+	display: flex;
+	flex-flow: column;
+	margin-inline: auto;
+	max-width: 75%;
+	padding-block: 3em;
+}
+
+.main-padding > * {
+	width: 100%;
+}
